--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "My_JSCRIPT300_Spring2015_Project",
   "version": "1.0.0",
   "description": "Final project for the My JSCRIPT 300 Sprint 2015 class",
-  "main": "app.js",
+  "main": "app/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,11 +15,16 @@
   "bugs": {
     "url": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project/issues"
   },
-  "homepage": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project",
+  "homepage": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project/app/public/",
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
     "mongoose": "^4.0.5",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-mocha": "^0.4.12"
   }
 }
