--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "My_JSCRIPT300_Spring2015_Project",
   "version": "1.0.0",
   "description": "Final project for the My JSCRIPT 300 Sprint 2015 class",
-  "main": "app/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project/issues"
   },
-  "homepage": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project/app/public/",
+  "homepage": "https://github.com/gamboagirl/My_JSCRIPT300_Spring2015_Project",
   "dependencies": {
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cmd": "0.0.3",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha": "^0.4.12"
   }
 }
